[tool.poetry]
name = "countryinfo"
version = "1.0.1"
description = "A python module for returning data about countries, ISO info and states/provinces within them."
authors = ["Porimol Chandro <porimolchandroroy@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["countryinfo", "countries", "ISO", "data", "geography"]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
countryinfo = "countryinfo.countryinfo:CountryInfo"

[tool.mypy]
exclude = [
  ".git",
  ".gitignore",
  ".gitlab-ci.yml",
  "__pycache__",
  ".pytest_cache",
  ".mypy_cache",
  "RnD",
]
disallow_untyped_defs = true
disallow_untyped_calls = true
no_namespace_packages = true
ignore_missing_imports = true

[tool.flake8]
exclude = [
  ".git",
  ".gitignore",
  ".gitlab-ci.yml",
  "__pycache__",
  ".pytest_cache",
  ".mypy_cache",
  "RnD",
]
max-line-length = 120

[project.urls]
Homepage = "https://github.com/porimol/countryinfo"
Documentation = "https://github.com/porimol/countryinfo"
Repository = "https://github.com/porimol/countryinfo.git"
"Bug Tracker" = "https://github.com/porimol/countryinfo/issues"
