[tool.poetry]
name = "countryinfo"
version = "0.0.0"
description = "A Python module for returning data about countries, ISO info, and states/provinces within them."
readme = "README.md"
license = "MIT"
authors = ["Porimol Chandro <porimolchandroroy@gmail.com>"]
keywords = ["countryinfo", "country", "iso", "geography"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: GIS",
]
packages = [{ include = "countryinfo" }]
include = [
    "countryinfo/data/*.json",
    "countryinfo/data_no_iso/*.json",
    "countryinfo/py.typed",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.post{{ distance }}.dev0{% endif %}"

[tool.poetry.urls]
Homepage = "https://github.com/porimol/countryinfo"
Repository = "https://github.com/porimol/countryinfo"
"Bug Tracker" = "https://github.com/porimol/countryinfo/issues"

[tool.poetry.dependencies]
python = ">=3.11"
rapidfuzz = { version = ">=3.0", optional = true }
pydantic = { version = ">=2.0", optional = true }

[tool.poetry.extras]
fuzzy    = ["rapidfuzz"]
pydantic = ["pydantic"]
all      = ["rapidfuzz", "pydantic"]

[tool.poetry.scripts]
countryinfo = "countryinfo.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"

[tool.poetry.group.lint.dependencies]
mypy = ">=1.10"
black = ">=24.0"
isort = ">=5.13"
flake8 = ">=7.0"
flake8-bugbear = ">=24.0"
ruff = ">=0.9"
pylint = ">=3.0"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["countryinfo"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["countryinfo"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["countryinfo"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
